# Ashes2Ashes

./: .gitignore  README.md  alive_check  smallbackup
ashes/: autorun  backup  buildlog  buildmaint  buildrun  crash.msg  get_errs  keep_alive  reboot.msg  reboot_tasks.old  syslog  testrun
ashes/builder/: purgedir
ashes/builder/etc/: DELETED  badsites  players  players.old
ashes/builder/misc/: messages  socials
ashes/builder/plrobjs/: deleted
ashes/builder/plrtext/: deleted
ashes/builder/text/: greetings  greetings.old  handbook  immlist  motd  motd.old  news  policies  wizlist
ashes/builder/world/: copyzone
ashes/config/: config.status  configure  configure.in
ashes/config.old/: config.cache  config.status
ashes/doc/: running.doc
ashes/doc/OLD-DOCS/: dbsup.doc  hacker.doc  release.doc  running.doc
ashes/lib/: purgeobjs
ashes/lib/misc/: bugs  ideas  messages  socials  typos
ashes/lib/text/: background  credits  greetings  handbook  immlist  imotd  imotd.old  info  (+5 more)
ashes/src/: Makefile  Makefile.in  Makefile.temp  act.comm.c  act.informative.c  act.item.c  act.movement.c  act.offensive.c  act.other.c  act.skills.c  act.social.c  act.wizard.b.c  act.wizard.c  auction.c  ban.c  boards.c  boards.h  castle.c  class.c  class.h  comm.c  comm.h  conf.h.in  config.c  constants.c  db.c  db.h  fight.c  graph.c  handler.c  handler.h  interpreter.c  interpreter.h  licheck  limits.c  magic.c  mail.c  mail.h  makefile.bak  mobact.c  (+20 more)
public_html/: cool.html  index.html  new.html  policy.html  roll.html  staff.html  staff2.html
public_html/java/: index.html
(+567 files in other folders)
